# internal/banner/models.go
@@ -1,6 +1,8 @@
 package banner
 
-import "time"
+import (
+	"time"
+)
 
 type GetBannerParams struct {
 	Token           string `json:"-"`
@@ -23,6 +25,16 @@ type GetFilteredBannersParams struct {
 type GetFilteredBannersResponse struct {
 	BannerID  int64     `json:"banner_id" db:"banner_id"`
 	TagIDs    string    `json:"tag_ids" db:"tag_ids"`
+	FeatureID int64     `json:"feature_id" db:"feature_id"`
+	Content   string    `json:"content" db:"content"`
+	IsActive  bool      `json:"is_active" db:"is_active"`
+	CreatedAt time.Time `json:"created_at" db:"created_at"`
+	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
+}
+
+type GetFilteredBannersDecodeResponse struct {
+	BannerID  int64     `json:"banner_id" db:"banner_id"`
+	TagIDs    []int64   `json:"tag_ids" db:"tag_ids"`
 	FeatureID int64     `json:"feature_id" db:"feature_id"`
 	Content   string    `json:"content" db:"content"`
 	IsActive  bool      `json:"is_active" db:"is_active"`
@@ -57,4 +69,25 @@ type DBBanner struct {
 	IsActive  bool      `json:"is_active" db:"is_active"`
 	CreatedAt time.Time `json:"created_at" db:"created_at"`
 	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
+}
+
+type GetVersionResponse struct {
+	VersionID int64  `json:"version_id" db:"version_id"`
+	Data      []byte `json:"data" db:"data"`
+}
+
+type SelectVersionParams struct {
+	BannerID  int64 `query:"banner_id"`
+	VersionID int64 `query:"version_id"`
+}
+
+type GetVersionDecodeResponse struct {
+	VersionID int64     `json:"version_id"`
+	BannerID  int64     `json:"banner_id"`
+	TagIDs    string    `json:"tag_ids"`
+	FeatureID int64     `json:"feature_id"`
+	Content   string    `json:"content"`
+	IsActive  bool      `json:"is_active"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
